FIX added spacing to bottom of teamImg

--- a/src/pages/Home/Components/LeaderboardTable/LeaderboardTable.module.css
+++ b/src/pages/Home/Components/LeaderboardTable/LeaderboardTable.module.css
@@ -5,6 +5,8 @@
     object-fit: cover;
     border-radius: 30px;
     border: 5px solid black;
+    margin-bottom: 20px;
+    right: 0px;
 }
 
 .tableStyle {
